--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.worksheetcalculatedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.worksheetcalculatedeventargs.yml
@@ -1,46 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.WorksheetCalculatedEventArgs:interface'
-    summary: |-
-      提供有关引发计算事件的工作表的信息。
+### YamlMime:TSType
+name: Excel.WorksheetCalculatedEventArgs
+uid: excel!Excel.WorksheetCalculatedEventArgs:interface
+package: excel!
+fullName: Excel.WorksheetCalculatedEventArgs
+summary: >-
+  提供有关引发计算事件的工作表的信息。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.WorksheetCalculatedEventArgs
-    fullName: Excel.WorksheetCalculatedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.WorksheetCalculatedEventArgs#type:member'
-      - 'excel!Excel.WorksheetCalculatedEventArgs#worksheetId:member'
-  - uid: 'excel!Excel.WorksheetCalculatedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "WorksheetCalculated";'
-      return:
-        type:
-          - '"WorksheetCalculated"'
-  - uid: 'excel!Excel.WorksheetCalculatedEventArgs#worksheetId:member'
-    summary: |-
-      获取发生计算的工作表的 id。
+  \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: type
+  uid: excel!Excel.WorksheetCalculatedEventArgs#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: worksheetId
-    fullName: worksheetId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'worksheetId: string;'
-      return:
-        type:
-          - string
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type: "WorksheetCalculated";'
+    return:
+      type: "\"WorksheetCalculated\""
+- name: worksheetId
+  uid: excel!Excel.WorksheetCalculatedEventArgs#worksheetId:member
+  package: excel!
+  fullName: worksheetId
+  summary: >-
+    获取发生计算的工作表的 id。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'worksheetId: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 081444eb1975a65883cf062415257ad192d45836
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49254704"
