--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.fourredtoblackset.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.fourredtoblackset.yml
@@ -1,62 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.FourRedToBlackSet:interface'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.FourRedToBlackSet
-    fullName: Excel.FourRedToBlackSet
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.FourRedToBlackSet#blackCircle:member'
-      - 'excel!Excel.FourRedToBlackSet#grayCircle:member'
-      - 'excel!Excel.FourRedToBlackSet#pinkCircle:member'
-      - 'excel!Excel.FourRedToBlackSet#redCircle:member'
-  - uid: 'excel!Excel.FourRedToBlackSet#blackCircle:member'
-    name: blackCircle
-    fullName: blackCircle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'blackCircle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FourRedToBlackSet#grayCircle:member'
-    name: grayCircle
-    fullName: grayCircle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'grayCircle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FourRedToBlackSet#pinkCircle:member'
-    name: pinkCircle
-    fullName: pinkCircle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'pinkCircle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FourRedToBlackSet#redCircle:member'
-    name: redCircle
-    fullName: redCircle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'redCircle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-references:
-  - uid: 'excel!Excel.Icon:interface'
-    name: Icon
+### YamlMime:TSType
+name: Excel.FourRedToBlackSet
+uid: excel!Excel.FourRedToBlackSet:interface
+package: excel!
+fullName: Excel.FourRedToBlackSet
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: blackCircle
+  uid: excel!Excel.FourRedToBlackSet#blackCircle:member
+  package: excel!
+  fullName: blackCircle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'blackCircle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: grayCircle
+  uid: excel!Excel.FourRedToBlackSet#grayCircle:member
+  package: excel!
+  fullName: grayCircle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'grayCircle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: pinkCircle
+  uid: excel!Excel.FourRedToBlackSet#pinkCircle:member
+  package: excel!
+  fullName: pinkCircle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'pinkCircle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: redCircle
+  uid: excel!Excel.FourRedToBlackSet#redCircle:member
+  package: excel!
+  fullName: redCircle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'redCircle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+metadata:
+  ms.openlocfilehash: eb2014ddf43bfbfcddde8f3d00235113e505067e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49291111"
